@@ -213,16 +213,19 @@ static int xmp_truncate(const char *path, off_t size)
 	return 0;
 }
 
+#ifdef HAVE_UTIMENSAT
 static int xmp_utimens(const char *path, const struct timespec ts[2])
 {
 	int res;
 
+	/* don't use utime/utimes since they follow symlinks */
 	res = utimensat(0, path, ts, AT_SYMLINK_NOFOLLOW);
 	if (res == -1)
 		return -errno;
 
 	return 0;
 }
+#endif
 
 static int xmp_open(const char *path, struct fuse_file_info *fi)
 {
@@ -359,7 +362,9 @@ static struct fuse_operations xmp_oper = {
 	.chmod		= xmp_chmod,
 	.chown		= xmp_chown,
 	.truncate	= xmp_truncate,
+#ifdef HAVE_UTIMENSAT
 	.utimens	= xmp_utimens,
+#endif
 	.open		= xmp_open,
 	.read		= xmp_read,
 	.write		= xmp_write,
